# tinyspot

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
pico/: CMakeLists.txt  Dockerfile  build.sh
pico/lib/: CMakeLists.txt  README.md
pico/src/: CMakeLists.txt  main.c
rp2040/: Dockerfile  build.sh
rp2040/src/: main.c
